--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-particles-js": "^3.4.1",
     "react-scripts": "4.0.3",
     "react-tilt": "^0.1.4",
+    "react-tsparticles": "^1.37.3",
     "serve": "^11.3.2",
     "tachyons": "^4.12.0",
     "tsparticles": "1.36.0",
