--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-particles-js": "^3.4.1",
+    "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.37.3",
     "serve": "^11.3.2",
     "tachyons": "^4.12.0",
-    "tsparticles": "1.36.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
