--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
+    "react-scroll-horizontal": "^1.6.6",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.37.3",
     "serve": "^11.3.2",
