--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-scroll-horizontal": "^1.6.6",
+    "react-sticky-el": "^2.0.9",
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.37.3",
     "serve": "^11.3.2",
