--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
     "react-scroll-horizontal": "^1.6.6",
