--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-tilt": "^0.1.4",
     "react-tsparticles": "^1.37.3",
     "serve": "^11.3.2",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
